demo/50-dns-policy/calico.allow-dns-egress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.allow-dns-google-egress
  namespace: ns1
spec:
  tier: security
  selector: app == 'centos'
  order: 90
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    destination:
      domains:
      - '*.google.com'
      - 'google.com'
  # - action: Deny
  #   source: {}
  #   destination:
  #     selector: type == "public"
