demo/50-dns-policy/calico.allow-google-dns-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-google-dns-egress
spec:
  tier: security
  selector: projectcalico.org/namespace == "ns1"
  order: 90
  types:
    - Egress
  egress:
  - action: Allow
    source:
      selector: app == 'centos'
    destination:
      domains:
      - '*.google.com'
      - 'google.com'
